--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
-<div id="root"></div>
+<!--<div id="root"></div>-->
 <script>
 window.addEventListener('mousedown', function(e) {
   document.body.classList.add('mouse-navigation');
@@ -335,85 +335,8 @@ console.error = (function(old) {
                         <div class="head_prjtit">
                             <h3 class="tit_home"><span class="txt_head">New Story</span><!-- 2016-08-31 수정  : 타이틀 이미지로 처리 --></h3>
                         </div>
-                        <div class="info_episode #episode" id="newestList">
-                            <div class="box_episode">
-                                <a href="/episode/31551" class="link_episode">
-                <span class="figure_img">
-                    <img src="//t1.daumcdn.net/thumb/S222x140/?fname=https://t1.daumcdn.net/news/201711/20/storyfunding/20171120164047817gtmx.jpg" class="thumb_g" alt="">
-                                                                            </span>
-                                    <span class="detail_cont">
-                    <span class="inner_detail">
-                            <strong class="tit_g">소방관을 지키는 대학생들</strong>
-                            <span class="desc_g">우릴 구한 옷으로 소방관을 지키다 3화</span>
-                    </span>
-                </span>
-                                </a>
-                            </div>
-                            <div class="box_episode">
-                                <a href="/episode/31574" class="link_episode">
-                <span class="figure_img">
-                    <img src="//t1.daumcdn.net/thumb/S222x140/?fname=https://t1.daumcdn.net/news/201711/19/storyfunding/20171119223816080tkxt.jpg" class="thumb_g" alt="">
-                                                                            </span>
-                                    <span class="detail_cont">
-                    <span class="inner_detail">
-                            <strong class="tit_g">마리차강변과 대동강변</strong>
-                            <span class="desc_g">달리기로 노벨평화상 꿈꾸는 남자  10화</span>
-                    </span>
-                </span>
-                                </a>
-                            </div>
-                            <div class="box_episode">
-                                <a href="/episode/31439" class="link_episode">
-                <span class="figure_img">
-                    <img src="//t1.daumcdn.net/thumb/S222x140/?fname=https://t1.daumcdn.net/news/201711/16/storyfunding/20171116154911786iddn.jpg" class="thumb_g" alt="">
-                                                                            </span>
-                                    <span class="detail_cont">
-                    <span class="inner_detail">
-                            <strong class="tit_g">내 안에 존재하는 긍정정서 발견</strong>
-                            <span class="desc_g">자존감 향상 28일간 마음여행 2기 4화</span>
-                    </span>
-                </span>
-                                </a>
-                            </div>
-                            <div class="box_episode">
-                                <a href="/episode/31025" class="link_episode">
-                <span class="figure_img">
-                    <img src="//t1.daumcdn.net/thumb/S222x140/?fname=https://t1.daumcdn.net/news/201711/07/storyfunding/20171107230655494vdpq.jpg" class="thumb_g" alt="">
-                                                                            </span>
-                                    <span class="detail_cont">
-                    <span class="inner_detail">
-                            <strong class="tit_g">풀밭에서도 코딩할 수 있나요?</strong>
-                            <span class="desc_g">설리번 선생님의 설리번 선생님 5화</span>
-                    </span>
-                </span>
-                                </a>
-                            </div>
-                            <div class="box_episode">
-                                <a href="/episode/31578" class="link_episode">
-                <span class="figure_img">
-                    <img src="//t1.daumcdn.net/thumb/S222x140/?fname=https://t1.daumcdn.net/news/201711/20/storyfunding/20171120093403156di7s.jpg" class="thumb_g" alt="">
-                                                                            </span>
-                                    <span class="detail_cont">
-                    <span class="inner_detail">
-                            <strong class="tit_g">"금메달은 나와의 싸움일 뿐이다"</strong>
-                            <span class="desc_g">'빙상의 전설' 출간 프로젝트 7화</span>
-                    </span>
-                </span>
-                                </a>
-                            </div>
-                            <div class="box_episode">
-                                <a href="/episode/31533" class="link_episode">
-                <span class="figure_img">
-                    <img src="//t1.daumcdn.net/thumb/S222x140/?fname=https://t1.daumcdn.net/news/201711/17/storyfunding/20171117171610149g41d." class="thumb_g" alt="">
-                                                                            </span>
-                                    <span class="detail_cont">
-                    <span class="inner_detail">
-                            <strong class="tit_g">크리스마스 선물로 딸이 생겼어요</strong>
-                            <span class="desc_g">미리 메리 크리스마스! 2화</span>
-                    </span>
-                </span>
-                                </a>
-                            </div>
+                        <div class="info_episode #episode" id="root">
+
                         </div><!-- //info_episode -->
                         <div class="more_prj" style="display: block;" id="loadingArea">
                             <a href="javascript:now_more();" class="link_more"><span class="ico_storyfund"></span>더보기</a>
